--- a/orphanage.html
+++ b/orphanage.html
@@ -22,6 +22,8 @@
 
     <link rel="stylesheet" href="./public/css/main.css" />
     <link rel="stylesheet" href="./public/css/animation.css" />
+    <link rel="stylesheet" href="./public/css/side-bar.css" />
+    <link rel="stylesheet" href="./public/css/map.css" />
     <link rel="stylesheet" href="./public/css/page-orphanage.css" />
 
     <link
