layout de cadastro pronto

--- a/orphanage.html
+++ b/orphanage.html
@@ -23,6 +23,7 @@
     <link rel="stylesheet" href="./public/css/main.css" />
     <link rel="stylesheet" href="./public/css/animation.css" />
     <link rel="stylesheet" href="./public/css/side-bar.css" />
+    <link rel="stylesheet" href="./public/css/buttons.css" />
     <link rel="stylesheet" href="./public/css/map.css" />
     <link rel="stylesheet" href="./public/css/page-orphanage.css" />
 
